--- a/taskmanager/main/templates/main/index.html
+++ b/taskmanager/main/templates/main/index.html
@@ -4,6 +4,9 @@
 Vedmenko Photo
 {% endblock %}
 {% block content %}
+    <div class="img_bg">
+        <img src="/static/img/BG-3.jpg" alt="bg_photo">
+    </div>
     <div class="container">
         <div class="site-name">
             vedmenko-photo.ru
