--- a/taskmanager/static/css/style.css
+++ b/taskmanager/static/css/style.css
@@ -19,16 +19,6 @@ html, body {
 body {
     font-family: Montserrat_Thin;
     background-color: white;
-}
-
-
-.container {
-    width: 1920px;
-    height: 930px;
-    padding: 40px 60px 60px 60px;
-    outline: 3px solid white;
-    outline-offset: -3px;
-    background: url(/static/img/IMG_8431.jpg) no-repeat;
     background-size: 100%;
     -moz-background-size: 100%;
     -webkit-background-size: 100%;
@@ -37,11 +27,19 @@ body {
     zoom:100%;
 }
 
-.center {
-    display: flex;
-    align-items: center;
-}
 
+.container {
+    width: 100%;
+    height: 100%;
+    padding: 40px 60px 60px 60px;
+    border: 3px solid white;
+}
+.img_bg{
+  z-index: -100;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
 .site-name {
     color: white;
     text-align: right;
@@ -103,9 +101,8 @@ a.lin:hover {border-bottom: 1px double white;}
 
 .social-links {
     position: absolute;
-    display: inline;
-    top: 91%;
-    left: 93%;
+    left:92%;
+    top:92%;
 }
 
 .social-links-2 {
@@ -120,7 +117,7 @@ a.lin:hover {border-bottom: 1px double white;}
 .social-pics {
     height: 35px;
     width: 35px;
-    margin: 1px;
+    margin-left: 10px;
 }
 
 .social-link-button {
