--- a/taskmanager/main/templates/main/portrait-photography.html
+++ b/taskmanager/main/templates/main/portrait-photography.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 {% load static %}
 {% block title %}
-Portfolio
+Portrait Phothoraphy
 {% endblock %}
 {% block content %}
     <div class="portfolio-container">
@@ -35,16 +35,17 @@ Portfolio
         </div>
         <hr class="poloska2">
         <div class="photo-blocks">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_6722.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8692-2.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8403.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8408.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8417.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8165.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8233.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_7792.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8704.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8275.jpg' %}">
+            <div class="photo-blocks">
+                <img class="block-img-horizontal" src="{% static 'img/portraits/IMG_6688.jpg' %}">
+                <img class="block-img-vertical" src="{% static 'img/portraits/IMG_7887.jpg' %}">
+                <img class="block-img-vertical" src="{% static 'img/portraits/IMG_7913.jpg' %}">
+                <img class="block-img-horizontal" src="{% static 'img/portraits/IMG_7713.jpg' %}">
+                <img class="block-img-vertical" src="{% static 'img/portraits/IMG_7937.jpg' %}">
+                <img class="block-img-vertical" src="{% static 'img/portraits/IMG_7940.jpg' %}">
+                <img class="block-img-horizontal" src="{% static 'img/portraits/IMG_8021.jpg' %}">
+                <img class="block-img-vertical" src="{% static 'img/portraits/IMG_8501.jpg' %}">
+                <img class="block-img-vertical" src="{% static 'img/portraits/IMG_8664.jpg' %}">
+            </div>
         </div>
         <hr class="poloska3">
         <div class="portfolio-bottom">
