--- a/taskmanager/main/templates/main/street-photography.html
+++ b/taskmanager/main/templates/main/street-photography.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 {% load static %}
 {% block title %}
-Portfolio
+Street Phothoraphy
 {% endblock %}
 {% block content %}
     <div class="portfolio-container">
@@ -35,16 +35,16 @@ Portfolio
         </div>
         <hr class="poloska2">
         <div class="photo-blocks">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_6722.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8692-2.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8403.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8408.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8417.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8165.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8233.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_7792.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8704.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/portfolio/IMG_8275.jpg' %}">
+            <img class="block-img-horizontal" src="{% static 'img/street/IMG_8692.jpg' %}">
+            <img class="block-img-vertical" src="{% static 'img/street/IMG_7731.jpg' %}">
+            <img class="block-img-vertical" src="{% static 'img/street/IMG_7737.jpg' %}">
+            <img class="block-img-horizontal" src="{% static 'img/street/IMG_7792.jpg' %}">
+            <img class="block-img-horizontal" src="{% static 'img/street/IMG_7797.jpg' %}">
+            <img class="block-img-vertical" src="{% static 'img/street/IMG_8387.jpg' %}">
+            <img class="block-img-vertical" src="{% static 'img/street/IMG_8397.jpg' %}">
+            <img class="block-img-horizontal" src="{% static 'img/street/IMG_8424.jpg' %}">
+            <img class="block-img-horizontal" src="{% static 'img/street/IMG_8165.jpg' %}">
+            <img class="block-img-horizontal" src="{% static 'img/street/IMG_7744.jpg' %}">
         </div>
         <hr class="poloska3">
         <div class="portfolio-bottom">
