--- a/taskmanager/main/templates/main/about.html
+++ b/taskmanager/main/templates/main/about.html
@@ -37,7 +37,7 @@ About
                 </br>
             </div>
             <div class="about-img">
-                <img class="avatar" src="{% static 'img/ava.jpg' %}">
+                <img class="avatar" src="https://i.ibb.co/rH19Yqg/ava.jpg">
             </div>
         </div>
         <hr class="poloska3">
