--- a/taskmanager/main/templates/main/bw-photography.html
+++ b/taskmanager/main/templates/main/bw-photography.html
@@ -35,13 +35,13 @@ B & W Phothoraphy
         </div>
         <hr class="poloska2">
         <div class="photo-blocks">
-            <img class="block-img-horizontal" src="{% static 'img/bw/IMG_8332.jpg' %}">
-            <img class="block-img-vertical" src="{% static 'img/bw/IMG_8339.jpg' %}">
-            <img class="block-img-vertical" src="{% static 'img/bw/IMG_8328.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/bw/IMG_8341.jpg' %}">
-            <img class="block-img-vertical" src="{% static 'img/bw/IMG_8390.jpg' %}">
-            <img class="block-img-vertical" src="{% static 'img/bw/IMG_8474.jpg' %}">
-            <img class="block-img-horizontal" src="{% static 'img/bw/IMG_8598.jpg' %}">
+            <img class="block-img-horizontal" src="https://i.ibb.co/D48jy9q/IMG-8332.jpg">
+            <img class="block-img-vertical" src="https://i.ibb.co/m0J5svH/IMG-8339.jpg">
+            <img class="block-img-vertical" src="https://i.ibb.co/CMPzX0r/IMG-8328.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/99p1Zrb/IMG-8341.jpg">
+            <img class="block-img-vertical" src="https://i.ibb.co/jLQg4MG/IMG-8390.jpg">
+            <img class="block-img-vertical" src="https://i.ibb.co/R3y6Mky/IMG-8474.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/wBVWczJ/IMG-8598.jpg">
         </div>
         <hr class="poloska3">
         <div class="portfolio-bottom">
