--- a/taskmanager/main/templates/main/contact.html
+++ b/taskmanager/main/templates/main/contact.html
@@ -24,7 +24,7 @@ Contact
         <hr class="poloska1">
         <div class="contact-blocks">
             <div class="contact-photo-block">
-                <img class="contact-photo" src="{% static 'img/contact-photo.jpg' %}">
+                <img class="contact-photo" src="https://i.ibb.co/8sp3Xqh/contact-photo.jpg">
             </div>
             <div class="contact-text-block">
                 <h3 class="contact-text-title">Contact Me</h3>
