--- a/taskmanager/main/templates/main/index.html
+++ b/taskmanager/main/templates/main/index.html
@@ -5,7 +5,7 @@ Vedmenko Photo
 {% endblock %}
 {% block content %}
     <div class="img_bg">
-        <img class="background-img" src="{% static 'img/BG-4.png' %}">
+        <img class="background-img" src="https://i.ibb.co/99zXsxc/BG-4.png">
     </div>
     <div class="container">
         <div class="site-name">
