--- a/taskmanager/main/templates/main/street-photography.html
+++ b/taskmanager/main/templates/main/street-photography.html
@@ -6,7 +6,7 @@ Street Phothoraphy
 {% block content %}
     <div class="portfolio-container">
         <div class="logo-title">
-            <a class="lin-2" href="{% url 'index' %}">Ilia Vedmenko</a>
+            <a class="logo-title-text" href="{% url 'index' %}">Ilia Vedmenko</a>
         </div>
         <div class="logo-subtitle">
             Photography
