--- a/taskmanager/main/templates/main/portrait-photography.html
+++ b/taskmanager/main/templates/main/portrait-photography.html
@@ -36,15 +36,15 @@ Portrait Phothoraphy
         <hr class="poloska2">
         <div class="photo-blocks">
             <div class="photo-blocks">
-                <img class="block-img-horizontal" src="https://i.ibb.co/JxRW6kg/IMG-6688.jpg">
-                <img class="block-img-vertical" src="https://i.ibb.co/WKrTkZm/IMG-7887.jpg">
-                <img class="block-img-vertical" src="https://i.ibb.co/zH9D3Xf/IMG-7913.jpg">
-                <img class="block-img-horizontal" src="https://i.ibb.co/ZVFpPyq/IMG-7713.jpg">
-                <img class="block-img-vertical" src="https://i.ibb.co/Lr6v8Q5/IMG-7937.jpg">
-                <img class="block-img-vertical" src="https://i.ibb.co/frPHrps/IMG-7940.jpg">
-                <img class="block-img-horizontal" src="https://i.ibb.co/2SdJk9S/IMG-8021.jpg">
-                <img class="block-img-vertical" src="https://i.ibb.co/ngtqydV/IMG-8664.jpg">
-                <img class="block-img-vertical" src="https://i.ibb.co/NKzGRYc/IMG-8501.jpg">
+                <img class="block-img-horizontal" src="https://i.ibb.co/LpMD6zS/IMG-6688.jpg">
+                <img class="block-img-vertical" src="https://i.ibb.co/5MFx530/IMG-7887.jpg">
+                <img class="block-img-vertical" src="https://i.ibb.co/9p0yjDK/IMG-7913.jpg">
+                <img class="block-img-horizontal" src="https://i.ibb.co/nn4Kk6k/IMG-7713.jpg">
+                <img class="block-img-vertical" src="https://i.ibb.co/r63dXd6/IMG-7937.jpg">
+                <img class="block-img-vertical" src="https://i.ibb.co/y0RVH3D/IMG-7940.jpg">
+                <img class="block-img-horizontal" src="https://i.ibb.co/SvvtKWH/IMG-8021.jpg">
+                <img class="block-img-vertical" src="https://i.ibb.co/WcD6Y3C/IMG-8664.jpg">
+                <img class="block-img-vertical" src="https://i.ibb.co/7Xqy12q/IMG-8501.jpg">
             </div>
         </div>
         <hr class="poloska3">
