--- a/taskmanager/main/templates/main/genre-photography.html
+++ b/taskmanager/main/templates/main/genre-photography.html
@@ -35,16 +35,16 @@ Genre Phothoraphy
         </div>
         <hr class="poloska2">
         <div class="photo-blocks">
-            <img class="block-img-horizontal" src="https://i.ibb.co/PZ9J2m7/IMG-6394.jpg">
-            <img class="block-img-vertical" src="https://i.ibb.co/q0vfZz2/IMG-6388.jpg">
-            <img class="block-img-vertical" src="https://i.ibb.co/k2sRV9t/IMG-6399.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/jD0kb2p/IMG-7013.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/bBK8BKg/IMG-7026.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/KVBrDSY/IMG-7039.jpg">
-            <img class="block-img-vertical" src="https://i.ibb.co/8sF8jnG/IMG-9106.jpg">
-            <img class="block-img-vertical" src="https://i.ibb.co/N6sFgNc/IMG-9136.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/5nGN9nq/IMG-9093.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/9nNLd3R/IMG-9062.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/nCWzF5w/IMG-6394.jpg">
+            <img class="block-img-vertical" src="https://i.ibb.co/ZKDKZgD/IMG-6388.jpg">
+            <img class="block-img-vertical" src="https://i.ibb.co/RBt9WNQ/IMG-6399.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/XCz8Whc/IMG-7013.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/M9J7MR1/IMG-7026.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/xSpLngM/IMG-7039.jpg">
+            <img class="block-img-vertical" src="https://i.ibb.co/hCbN3Gy/IMG-9106.jpg">
+            <img class="block-img-vertical" src="https://i.ibb.co/64m2f8m/IMG-9136.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/P1VFzx1/IMG-9093.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/bRnh4yq/IMG-9062.jpg">
         </div>
         <hr class="poloska3">
         <div class="portfolio-bottom">
