--- a/taskmanager/main/templates/main/portfolio.html
+++ b/taskmanager/main/templates/main/portfolio.html
@@ -35,16 +35,16 @@ Portfolio
         </div>
         <hr class="poloska2">
         <div class="photo-blocks">
-            <img class="block-img-horizontal" src="https://i.ibb.co/Hz2x29s/IMG-6722.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/b5gmFNw/IMG-8692-2.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/GRWTLpY/IMG-8403.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/zVKQGnr/IMG-8408.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/mRWHJHQ/IMG-8417.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/LgQdz1d/IMG-8165.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/5FwVpQt/IMG-8233.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/ygSkyVp/IMG-7792.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/b3r2Rtn/IMG-8704.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/tqTBJwh/IMG-8275.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/HCwCZC9/IMG-6722.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/hX0Cttw/IMG-8692.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/F592K2n/IMG-8403.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/tJgvpY4/IMG-8408.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/VL5C02b/IMG-8417.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/JQFtBrs/IMG-8165.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/KxV2bS9/IMG-8233.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/G5ddY4V/IMG-7792.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/KFKm7cf/IMG-8704.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/p3dxyjb/IMG-8275.jpg">
         </div>
         <hr class="poloska3">
         <div class="portfolio-bottom">
