--- a/taskmanager/main/templates/main/street-photography.html
+++ b/taskmanager/main/templates/main/street-photography.html
@@ -35,16 +35,16 @@ Street Phothoraphy
         </div>
         <hr class="poloska2">
         <div class="photo-blocks">
-            <img class="block-img-horizontal" src="https://i.ibb.co/Prsw61S/IMG-8692.jpg">
-            <img class="block-img-vertical" src="https://i.ibb.co/TbLJD4w/IMG-7731.jpg">
-            <img class="block-img-vertical" src="https://i.ibb.co/1QCQTLM/IMG-7737.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/hxGvfG6/IMG-7792.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/VCkm3wL/IMG-7797.jpg">
-            <img class="block-img-vertical" src="https://i.ibb.co/SXmrqnS/IMG-8387.jpg">
-            <img class="block-img-vertical" src="https://i.ibb.co/Nnh00w9/IMG-8397.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/X4d0jSH/IMG-8424.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/jwMxvS7/IMG-8165.jpg">
-            <img class="block-img-horizontal" src="https://i.ibb.co/NK5x4Hs/IMG-7744.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/hX0Cttw/IMG-8692.jpg">
+            <img class="block-img-vertical" src="https://i.ibb.co/rMvsSN5/IMG-7731.jpg">
+            <img class="block-img-vertical" src="https://i.ibb.co/7nJKQYh/IMG-7737.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/XXTx9N0/IMG-7792.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/4NDSNxK/IMG-7797.jpg">
+            <img class="block-img-vertical" src="https://i.ibb.co/ypvLkv6/IMG-8387.jpg">
+            <img class="block-img-vertical" src="https://i.ibb.co/d5YgRNX/IMG-8397.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/Vj5wqCS/IMG-8424.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/JQFtBrs/IMG-8165.jpg">
+            <img class="block-img-horizontal" src="https://i.ibb.co/tbyLhfL/IMG-7744.jpg">
         </div>
         <hr class="poloska3">
         <div class="portfolio-bottom">
