edit setting and links

--- a/taskmanager/main/templates/main/contact.html
+++ b/taskmanager/main/templates/main/contact.html
@@ -75,8 +75,9 @@ Contact
                             </div>
                         </label>
                     </fieldset>
+
                     <div class="submit-button">
-                        <input class="button" type="submit" value="SUBMIT">
+                        <button type="submit" class="button" value="SUBMIT">Отправить</button>
                     </div>
                 </form>
             </div>
